2005-03-02  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: recognize stream errors and log as such
    * dialback/dialback_out.c: don't request dialback if not needed,
    	don't send the id attribute on outgoing connections

2005-02-28  Matthias Wimmer  <m@tthias.net>

    * pthsock/client.c: support for the register stream feature
    * dialback/dialback_in.c: fixed problem if compiled without SSL support

2005-02-27  Matthias Wimmer  <m@tthias.net>

    * configure.in: Check for existence of crypt.h header file
    * jsm/modules/mod_groups.c: bugfix for checking the existence of a gid
    * jsm/modules/mod_auth_crypt.c: include crypt.h if existant, renamed
	function _get_salt() to mod_auth_crypt_get_salt()
    * jsm/modules/mod_filter.c: removed unused element m from action_struct
    * jsm/jsm.c: bugfix for init of the list of "global trusted" jids

2005-02-25 Maqi <maqi@jabberstudio.org>

    * removed mod_auth_0k module
    * changed version to 1.4.4pre20050225
    * added info on -U switch
    * made libidn a requirement
    * removed authors list from README, see AUTHORS
    * removed other outdated info from README

2005-02-24  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_presence.c: Bugfix: presences with multiple stamps bug

2005-02-23  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: make unused code optional
    * jabberd/lib/genhash.c: same
    * jabberd/lib/pproxy.c: same
    * configure.in: added --enable-legacy switch

2005-02-22  Matthias Wimmer  <m@tthias.net>

    * xdb_sql/xdb_sql.c: added possibility to load XML fron database,
    	support for PostgreSQL server, using transactions
    * jabber.xml.dist.in: added PostgreSQL options
    * configure.in: check for PostgreSQL

2005-02-21  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: added new component xdb_sql
    * configure.in: same
    * xdb_sql/Makefile.am: same
    * xdb_sql/xdb_sql.c: same
    * Makefile.am: same
